[tool.poetry]
name = "hitmaker furnitures"
version = "0.1.0"
description = "A better online experience app that allow customers to browse and purchase furniture online"
authors = ["r0w4nr00t <r0w4nr00t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.5"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-environ = "^0.12.0"
mailtrap = "^2.0.1"
djoser = "^2.3.1"
djangorestframework-simplejwt = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
